vcluster_versioned_docs/version-0.31.0/configure/vcluster-yaml/experimental/_code/sleepmode-istio-examples.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: nginx-service
  namespace: test
spec:
  gateways:
    - istio-sm-gateway
  hosts:
    - smdemo.local
  http:
    - match:
        - uri:
            prefix: /v2
      name: nginx-v2
      rewrite:
        uri: /
      route:
        - destination:
            host: nginx-service.test.svc.cluster.local
            subset: v2
    - name: nginx-v1
      route:
        - destination:
            host: nginx-service.test.svc.cluster.local
            subset: v1
